--- a/app/src/resources/mainview.fxml
+++ b/app/src/resources/mainview.fxml
@@ -28,14 +28,14 @@
     </rowConstraints>
 
     <Text text="Files" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <TextField GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="selectedFiles"/>
+    <TextField GridPane.rowIndex="0" GridPane.columnIndex="1" fx:id="filesField"/>
     <Button mnemonicParsing="false" text="Select" GridPane.rowIndex="0" GridPane.columnIndex="2" fx:id="selectFileBtn"/>
 
-    <Text text="Folder" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <TextField GridPane.rowIndex="1" GridPane.columnIndex="1" fx:id="folderNameField"/>
+    <Text text="Target folder" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+    <TextField GridPane.rowIndex="1" GridPane.columnIndex="1" fx:id="targetFolderField"/>
     <Button mnemonicParsing="false" text="Select" GridPane.rowIndex="1" GridPane.columnIndex="2" fx:id="selectFolderBtn"/>
 
-    <Text text="Scaffold as" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+    <Text text="Pattern" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
     <TextField GridPane.rowIndex="2" GridPane.columnIndex="1" fx:id="patternField"/>
 
     <HBox GridPane.rowIndex="3" GridPane.columnIndex="1" alignment="BASELINE_CENTER" spacing="10">
